--- a/index.html
+++ b/index.html
@@ -300,87 +300,38 @@
 		<img src="./flick-transparent.png" class="thumbnail">
 		<!-- <div class="check"><i class="fas fa-check"></i></div> -->
 		<h3 class="name">Uptown</h3>
-		<p class="title">your brand our trust</p>
-		<p class="description">Premium Business cards with profile and Websites at lowest price ever !</p>
+		<p class="title">Cafe - Longue - Bar</p>
+		<p class="description"></p>
 		<button type="button" class="btn" >Services</button>
 	</div>
 	
 	<div class="social-icons">
 		<div class="icon">
-			<a href="tel:+919922776780"><i class="fa fa-solid fa-phone" style="-webkit-transform: scaleX(-1);
+			<a href="tel:+918552032444"><i class="fa fa-solid fa-phone" style="-webkit-transform: scaleX(-1);
                 transform: scaleX(-1);"></i></a>
 			<h4>Call</h4>
 			<!-- <p>9922776780</p> -->
 		</div>
 		
 		<div class="icon">
-			<a href="https://wa.me/9922776780"><i class="fab fa-whatsapp"></i></a>
+			<a href="https://wa.me/+918552032444"><i class="fab fa-whatsapp"></i></a>
 			<h4>Chat</h4>
 			<!-- <p></p> -->
 		</div>
 		
 		<div class="icon">
-			<a href="https://instagram.com/flickcards?igshid=MzMyNGUyNmU2YQ==" style="background: #d6249f;
+			<a href="https://www.instagram.com/uptown501.mh20?igsh=MTBuaXU2MmVwbGk4cg==" style="background: #d6249f;
             background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);"><i class="fab fa-instagram"></i></a>
 			<h4>Follow</h4>
 			<!-- <p>@ig_gogorgeous</p> -->
 		</div>
 	</div>
 	
-	<div class="social-icons">
-        <div class="icon">
-			<a href="#"><i class="fas fa-map-marker-alt"></i></i></a>
-			<h4>Tweet</h4>
-			<!-- <p>9922776780</p> -->
-		</div>
-		
-		<div class="icon" >
-			<a href="#" style="background: linear-gradient(to bottom right, #ffdd02, #ffee02);"><i class="fab fa-snapchat"></i></a>
-			<h4>Snap</h4>
-			<!-- <p></p> -->
-		</div>
-		
-		<div class="icon">
-			<a href="#" ><i class="fab fa-youtube"></i></a>
-			<h4>YTube</h4>
-			<!-- <p>@ig_gogorgeous</p> -->
-		</div>
-	</div>
-    <div class="seperator"></div>
-
-    <div class="qrcode">
-        <img src="./jayesh-qr.jpeg" alt="">
-    </div>
-
-    <div class="profile">
-        
-        <div class="description"><h4>9922776780@paytm</h4></div>
-        <div class="pay-logo">
-            <img src="./paytm-logo.jpeg" alt="">
-            <img src="./phonepe-logo.jpeg" alt="">
-            <img src="./gpay-logo.jpeg" alt="">
-        </div>
-    </div>
-
-    <!-- flick logo  -->
-    <div class="qrcode">
-        <a href="https://instagram.com/flickcards?igshid=MzMyNGUyNmU2YQ==">
-        <img src="./flick-transparent.png" alt="" ></a>
-    </div>
-    <div class="profile">
-    <div class="description">
-
-        <h4>Want something like this !?</h4>
-        <h5>Click on the logo ! ! !</h5>
-    </div>
-</div>
-    <!-- <div class="seperator"></div> -->
-    <!-- wrapper div ends here  -->
-</div>
+	
 
 <div class="concept">Designed by :  
 	<a href="#" target="_blank">
-		 F L I C K
+		 JAYESH
 	</a>
 </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.js"></script>
