--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </div>
             
             <div class="profile">
-		<img src="./flick-transparent.png" class="thumbnail">
+		<img src="./uptown.png" class="thumbnail">
 		<!-- <div class="check"><i class="fas fa-check"></i></div> -->
 		<h3 class="name">Uptown</h3>
 		<p class="title">Cafe - Longue - Bar</p>
