--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <h1>Who needs a time machine when we have our epic memories to relive over and over?</h1>
 
   <br>
-  <a href="https://www.instagram.com/flikcards/" style="text-decoration: none;">
+  <a href="https://www.instagram.com/flikcards/" >
     <footer>Specially handcrafted by <strong>FLIKCARDS</strong></footer>
   </a>
   <br>
